# tube_straightness_measure

./: CLAUDE.md  README.md
docs/: tsm_arithmetic_design.md
docs/paper/: main.aux  main.tex  nips_2018.sty
scripts/: install_ceres.sh  plot_pose.py  tsm_draw.py
tsm/: CMakeLists.txt  package.xml
tsm/config/: tsm_config.yaml
tsm/include/tsm/: def.hpp  fit_ceres_stuct.hpp  tsm_node.hpp
tsm/launch/: bringup.launch.py
tsm/src/: fit_each_segment.cpp  integral_process.cpp  integrator.cpp  kalman_smoother.cpp  post_process.cpp  tsm_node.cpp  wls.cpp
tsm_gz_sim/: CMakeLists.txt  DESIGN.md  package.xml
tsm_gz_sim/config/: sim_config.yaml  topic_bridge_config.yaml
tsm_gz_sim/include/gz_sim/: keyboard_node.hpp  tsm_gz_sim_node.hpp
tsm_gz_sim/launch/: bringup.launch.py
tsm_gz_sim/rviz/: rviz.rviz
tsm_gz_sim/sdf/: measure_world.sdf  measure_world_claude.md
tsm_gz_sim/sdf/bend_tube/: bend_tube.sdf
tsm_gz_sim/sdf/straight_tube/: straight_tube.sdf
tsm_gz_sim/src/: keyboard_node.cpp  tsm_gz_sim_node.cpp
