<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tsm</name>
  <version>0.0.0</version>
  <description>Tube straightness measurement core package</description>
  <maintainer email="ziyedeyuu@163.com">ziyu</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>message_filters</depend>
  <depend>opencv2</depend>
  <depend>cv_bridge</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ament_index_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
