<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tsm_gz_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ziyu@todo.todo">ziyu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>ros_gz_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>gz_transport_vendor</depend>
  <depend>gz_msgs_vendor</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
